--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,74 @@
+@use '@angular/material' as mat;
+@import '~@angular/material/theming';
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$mat-primary:( 50: #e0f2fa, 100: #b3def2, 200: #80c8e9, 300: #4db1e0, 400: #26a1d9, 500: #0090d2, 600: #0088cd, 700: #007dc7, 800: #0073c1, 900: #0061b6, contrast:( 800: #fff, 600:#fff, 900: #fff, ));
+$mat-accent:( 50: #fafbfc, 100: #f3f6f7, 200: #ebf0f2, 300: #e3eaed, 400: #dde6e9, 500: #d7e1e5, 600: #d3dde2, 700: #cdd9de, 800: #c7d5da, 900: #becdd3, contrast:( 800: #fff, 600:#fff, 900: #fff, ));
+$mat-warn:( 50: #ffe6e0, 100: #ffc0b3, 200: #ff9680, 300: #ff6b4d, 400: #ff4c26, 500: #ff2c00, 600: #ff2700, 700: #ff2100, 800: #ff1b00, 900: #ff1000, contrast:( 800: #fff, 600:#fff, 900: #fff, ));
+$gray-color:#696662;
+$AgendVet-primary: mat.define-palette($mat-primary);
+$AgendVet-accent: mat.define-palette($mat-accent);
+
+// The warn palette is optional (defaults to red).
+$AgendVet-warn: mat.define-palette($mat-warn);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$AgendVet-theme: mat.define-light-theme((
+  color: (
+    primary: $AgendVet-primary,
+    accent: $AgendVet-accent,
+    warn: $AgendVet-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($AgendVet-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+.primary-color {
+  color: mat-color($AgendVet-primary) !important;
+}
+
+.warn-color {
+  color: mat-color($AgendVet-warn) !important;
+}
+
+.accent-color {
+  color: mat-color($AgendVet-accent) !important;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.title {
+    font-size: 16px;
+    margin: 10px;
+    color: mat-color($AgendVet-primary);
+}
+
+.subtitle {
+    font-size: 16px;
+    margin-left: 8px;
+    color: mat-color($AgendVet-primary);
+}
