Changed responce model

--- a/src/app/components/booking/booking.component.html
+++ b/src/app/components/booking/booking.component.html
@@ -26,7 +26,7 @@
         <mat-label>Veterinario</mat-label>
         <mat-select>
           <mat-option *ngFor="let item of veterinarios; let index = index" [value]="index">
-            {{item.person.name}}
+            {{item.name}}
           </mat-option>
         </mat-select>
       </mat-form-field>
