Getting veterinaries fixed

--- a/src/app/components/booking/booking.component.html
+++ b/src/app/components/booking/booking.component.html
@@ -4,7 +4,7 @@
     <div fxLayout="column" fxLayoutAlign="space-evenly center">
       <mat-form-field class="input" appearance="standard">
         <mat-label>Nombre dueño</mat-label>
-        <input matInput type="text" />
+        <input type="text" matInput [(ngModel)]="ownerName">
       </mat-form-field>
       <mat-form-field class="input" appearance="standard">
         <mat-label>Numero de documento</mat-label>
